# duckdb-docker-etl

./: .env  README.md  pipeline_00.py  pipeline_tests.ipynb  pyproject.toml  requirements.txt  streamlit.py
pasta_down/: orders_20240817.csv  orders_20240818.csv  orders_20240819.csv
